Fix build failure
Older builds compile Buildship with Java 8, which does not have the
Set.of() and the List.of() method. This change fixes the builds by
using similar methods from the Guava library.